# Mirror-Bot

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  config.py  deploy.sh  docker-compose.yaml  documentation.md  main.py  pyproject.toml
.claude/: settings.json
.claude/skills/process-directory-list/: SKILL.md
app/: config.py  handlers.py  keyboards.py  leaderboard.py  replies.py
app/ai/: chat.py
app/coingecko/: fetching.py
app/database/: connection.py
app/gemini/: chat.py
bot/: config.py  handlers.py  keyboards.py  replies.py
bot/openrouterai/: openrouter.py
coingecko_reports/: prices.py
db_scripts/: scripts.sql
gemini/: chat.py  tokens.py
init_DB/: database.sql
job_reports/: job_config.py  reports.py  testing.py
