[project]
name = "team-bot-telegram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram>=3.24.0",
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "httpx>=0.28.1",
    "lxml>=6.0.2",
    "pandas>=2.3.3",
    "psycopg[binary]>=3.3.3",
    "requests>=2.32.5",
    "tic-tac-toe-3x3>=1.1.0",
    "apscheduler>=3.10.4",
]
